<resources>
    <string name="app_name">SimplTask</string>
    <string name="placeHolderName">Roshan Sam</string>
    <string name="placeHolderNumber">9883828282</string>
    <string name="buttonChangeNameText">CHANGE</string>
    <string name="etBillAmountHint">₹ Enter Bill amount</string>
    <string name="textViewPayNowPlaceHolder">Pay using</string>
    <string name="textViewSimplTitlePlaceHolder">Simpl: ₹2000 available</string>
    <string name="textViewSimplDescPlaceHolder">₹2000 will be charged to your account</string>
    <string name="textViewUPIPlaceHolder">UPI</string>
    <string name="textViewUPIDescPlaceHolder">A payment request will be sent to your VPA</string>
    <string name="buttonPayNowPlaceHolder">PAY BILL</string>
    <string name="placeHolderOne">Change button clicked</string>
    <string name="placeHolderTwo">Close Button clicked</string>
    <string name="placeHolderThree">Please enter amount</string>
    <string name="placeHolderFour">Paying..</string>
    <string name="placeHolderFive">Pay now button clicked</string>
</resources>
